# Branham-LLM-AI-API

./: .cursorrules  .dockerignore  .gcloudignore  .gitignore  API_INPUT_FORMAT.md  CLAUDE.md  Dockerfile  LATENCY_IMPROVEMENT_PLAN.md  PROJECT_STATUS.md  README.md  REPOSITORY_TREE.md  SETUP_COMMANDS.md  WORKING_PROGRESS.md  ascii_diagram.md  pyproject.toml  scripts.md
.cursor/rules/: design_spec.md
config/: default.yaml  dev.yaml  prod.yaml
datasets/docs/: BM25_INDEX.md  DATA_FORMAT.md  DENSE_RETRIEVAL.md
datasets/ingest/: audit_db.py  build_chunks.py  download_pdfs.py  parse_to_paragraphs.py
docker/: entrypoint.sh
scripts/: audit_stress_run.py  bench_dense_faiss.py  bench_openrouter_models.py  bench_retrieval_comparison.py  build_bm25_index.py  build_faiss_index.py  deploy_cloudrun.py  experiment_embedding_models.py  patch_chunks_tail_metadata.py  patch_chunks_with_metadata.py  patch_paragraphs_sermon_title.py  prefetch_hf_model.py  profile_ttft.py  run_dev.sh  test_chat_full_flow.py  test_provider_latency.py  test_rag_pipeline.py
src/branham_model_api/: config.py
src/branham_model_api/api/: main.py
src/branham_model_api/api/routes/: chat.py  health.py
src/branham_model_api/api/schemas/: request.py  response.py
src/branham_model_api/core/pipeline/: __init__.py  early_gates.py  expansion.py  fusion.py  postcheck.py  rag_pipeline.py  signals.py
src/branham_model_api/core/prompts/: __init__.py  system_prompt.txt  templates.py
src/branham_model_api/core/tools/: __init__.py  biography_tool.py  db_search_tool.py  factory.py  loop_runner.py  registry.py  serper_tool.py
src/branham_model_api/generation/: __init__.py  api_keys.py  litellm_client.py
src/branham_model_api/retrieval/bm25/: __init__.py  index.py  query.py
src/branham_model_api/retrieval/dense/: __init__.py  embedder.py  index_faiss.py  query.py  vllm_embedder.py
src/branham_model_api/retrieval/reranker/: __init__.py  reranker.py  vllm_reranker.py
src/branham_model_api/retrieval/store/: __init__.py  chunk_store.py
src/branham_model_api/utils/: __init__.py  device.py  git_branch.py
tests/: test_aux_tools.py  test_chat_sse.py  test_chunking.py  test_deploy_cloudrun.py  test_fusion_dedup.py  test_generation_api_keys.py  test_litellm_client.py  test_litellm_mixed_client.py  test_multilingual_detection.py  test_postcheck.py  test_prompt_templates.py  test_tools_phase_d.py
training/docs/: TRAINING_GUIDE.md
