[project]
name = "branham-model-api"
version = "0.1.0"
description = "Production-grade Python API for fast RAG pipeline + multilingual generator with strict grounding and message references"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    # ── API server ──
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "sse-starlette>=3.1.2",
    "pydantic>=2.12.5",

    # ── Retrieval (BM25 + FAISS) ──
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.1",
    "spacy>=3.8.11",

    # ── Embedding model (CPU-only inference) ──
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "huggingface_hub[cli]",

    # ── LLM client (OpenRouter / DeepSeek via LiteLLM) ──
    "litellm>=1.81.10",
    "tiktoken>=0.12.0",

    # ── Tools & utilities ──
    "requests>=2.31.0",
    "langid>=1.1.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Training / fine-tuning (GPU required, not needed for serving)
training = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "peft>=0.18.0",
    "tensorboard>=2.20.0",
    "trl>=0.26.2",
    "wandb>=0.23.1",
    "ninja>=1.13.0",
]

# Data ingestion pipeline (not needed for serving)
ingest = [
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
    "lingua-language-detector>=2.1.1",
    "aiosqlite>=0.22.1",
    "rank-bm25>=0.2.2",
    "scipy>=1.16.3",
    "pydantic-settings>=2.12.0",
    "protobuf>=6.33.2",
    "gunicorn>=23.0.0",
]

# Optional optimizations (gated by flags)
optimum = [
    "optimum>=1.14.0",
]

# Flash attention / xformers (optional, gated by flags)
flash-attn = [
    "flash-attn>=2.0.0",
]

# Redis support (optional, for text store)
redis = [
    "redis>=5.0.0",
    "hiredis>=2.2.0",
]

# PostgreSQL support (optional, for text store)
postgres = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]

# vLLM support (for online serving - query embedding and reranking)
# Note: vLLM requires CUDA; for Apple Silicon dev, use HuggingFace path
# vllm-serving = [
#     "vllm>=0.8.5",
# ]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "sqlite-utils>=3.37",  # Helpful CLI and utilities for SQLite
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/branham_model_api"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true  # Needed for torch, transformers, etc.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
